--- a/style.css
+++ b/style.css
@@ -67,3 +67,13 @@ body.wrong {
   font-weight: bold;
   padding: 10px 20px;
 }
+
+.controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hide {
+  display: none;
+}
